[package]
name = "myloginrs"
version = "0.1.4"
authors = ["James Cortese <rjcortese@gmail.com>"]
edition = "2021"
description = "Read and parse MySQL's .mylogin.cnf file."
readme = "README.md"
repository = "https://github.com/rjcortese/myloginrs"
documentation = "https://docs.rs/myloginrs"
license = "MIT/Apache-2.0"
keywords = ["mysql", "mylogin", "mysql_config_editor"]
categories = ["authentication", "command-line-interface", "config", "filesystem"]
exclude = ["tests/*", ".*"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
shellexpand = "3.0.0"
openssl = "0.10.29"
rust-ini = "0.18.0"

[dev-dependencies]
mysql = "23.0.0"
