[package]
name = "myloginrs"
version = "0.1.6"
authors = ["James Cortese <rjcortese@gmail.com>"]
edition = "2021"
rust-version = "1.89"
description = "Read and parse MySQL's .mylogin.cnf file."
readme = "README.md"
repository = "https://github.com/rjcortese/myloginrs"
documentation = "https://docs.rs/myloginrs"
license = "MIT/Apache-2.0"
keywords = ["mysql", "mylogin", "mysql_config_editor"]
categories = ["authentication", "command-line-interface", "config", "filesystem"]
exclude = ["tests/*", ".*"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
shellexpand = "3.1.1"
openssl = "0.10.75"
rust-ini = "0.21.3"

[dev-dependencies]
mysql = "26.0.1"
